[package]
name = "incomeapp"
version = "0.1.0"
authors = ["Oscar Ventura <ovenor11@proton.me>"]
edition = "2021"
build = "build.rs"
description = "A desktop app that divides your income into different categories."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.6"

[build-dependencies]
slint-build = "1.6"

[package.metadata.bundle]
name = "Income Divider"
identifier = "io.github.lunaticfriki.incomeapp"
